fix: visibility of dialog effecting buttons

--- a/frontend/src/components/atoms/dialog/Dialog.module.css
+++ b/frontend/src/components/atoms/dialog/Dialog.module.css
@@ -11,7 +11,7 @@
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 .dialog {
